fix: adjust product card image wrap bottom margin

--- a/src/assets/styles/pages/solution/_solution_products.scss
+++ b/src/assets/styles/pages/solution/_solution_products.scss
@@ -42,7 +42,7 @@
 
     &__image-wrap {
         height: 19.6rem;
-        margin-bottom: 3.2rem;
+        margin-bottom: 3rem;
     }
 
     &__image {
